ODEproblem macro + notebooks fixed

--- a/QWWC.ipynb
+++ b/QWWC.ipynb
@@ -19,26 +19,16 @@
     "logger = Logging.SimpleLogger(stdout, Logging.Debug)\n",
     "global_logger(logger)\n",
     "\n",
-    "var_names = [\n",
-    "    \"x\", \"y\", \"z\", \"w\",\n",
-    "    \"a\", \"b\", \"c\", \"d\", \"e\", \"f\"\n",
-    "]\n",
-    "\n",
-    "R, (x, y, z, w, a, b, c, d, e, f) = PolynomialRing(QQ, var_names)\n",
-    "\n",
-    "ode = ODE(\n",
-    "    Dict(\n",
-    "        x => a * (y - x) + y * z,\n",
-    "        y => b * (x + y) - x * z,\n",
-    "        z => - c * z - d * w + x * y,\n",
-    "        w => e * z - f * w + x * y\n",
-    "    ),\n",
-    "    []\n",
+    "ode = @ODEmodel(\n",
+    "    x'(t) = a * (y(t) - x(t)) + y(t) * z(t),\n",
+    "    y'(t) = b * (x(t) + y(t)) - x(t) * z(t),\n",
+    "    z'(t) = - c * z(t) - d * w(t) + x(t) * y(t),\n",
+    "    w'(t) = e * z(t) - f * w(t) + x(t) * y(t)\n",
     ")\n",
     "\n",
     "g = x\n",
     "\n",
-    "@time io_equation = find_ioequation(ode, g);"
+    "@time io_equations = find_ioequation(ode, [g]);"
    ]
   },
   {
@@ -47,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "length(ode.io_equation)"
+    "length(io_equations[1])"
    ]
   },
   {
@@ -57,7 +47,7 @@
    "outputs": [],
    "source": [
     "@time check_identifiability(\n",
-    "    ode.io_equation, \n",
+    "    io_equations[1], \n",
     "    [a, b, c, d, e, f];\n",
     "    method=\"GroebnerBasis\"\n",
     ")"
