added rank testing

--- a/wronskian_files/Wronskian_Testing.ipynb
+++ b/wronskian_files/Wronskian_Testing.ipynb
@@ -2,18 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "wronskian (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Precompiling GroebnerBasis [e39c9192-ea4d-5e15-9584-a488c6d614bd]\n",
+      "└ @ Base loading.jl:1278\n"
+     ]
+    },
+    {
+     "ename": "LoadError",
+     "evalue": "LoadError: LoadError: LoadError: ArgumentError: Package MacroTools not found in current path:\n- Run `import Pkg; Pkg.add(\"MacroTools\")` to install the MacroTools package.\n\nin expression starting at /home/christian/Mathematics/EliminationODE/src/ODE.jl:3\nin expression starting at /home/christian/Mathematics/EliminationODE/src/elimination.jl:6\nin expression starting at /home/christian/Mathematics/EliminationODE/wronskian_files/wronskian.jl:7",
+     "output_type": "error",
+     "traceback": [
+      "LoadError: LoadError: LoadError: ArgumentError: Package MacroTools not found in current path:\n- Run `import Pkg; Pkg.add(\"MacroTools\")` to install the MacroTools package.\n\nin expression starting at /home/christian/Mathematics/EliminationODE/src/ODE.jl:3\nin expression starting at /home/christian/Mathematics/EliminationODE/src/elimination.jl:6\nin expression starting at /home/christian/Mathematics/EliminationODE/wronskian_files/wronskian.jl:7",
+      "",
+      "Stacktrace:",
+      " [1] require(::Module, ::Symbol) at ./loading.jl:893",
+      " [2] include(::String) at ./client.jl:457",
+      " [3] top-level scope at /home/christian/Mathematics/EliminationODE/src/elimination.jl:6",
+      " [4] include(::String) at ./client.jl:457",
+      " [5] top-level scope at /home/christian/Mathematics/EliminationODE/wronskian_files/wronskian.jl:7",
+      " [6] include(::String) at ./client.jl:457",
+      " [7] top-level scope at In[5]:1",
+      " [8] execute_code(::String, ::String) at /home/christian/.julia/packages/IJulia/rWZ9e/src/execute_request.jl:27",
+      " [9] execute_request(::ZMQ.Socket, ::IJulia.Msg) at /home/christian/.julia/packages/IJulia/rWZ9e/src/execute_request.jl:86",
+      " [10] #invokelatest#1 at ./essentials.jl:710 [inlined]",
+      " [11] invokelatest at ./essentials.jl:709 [inlined]",
+      " [12] eventloop(::ZMQ.Socket) at /home/christian/.julia/packages/IJulia/rWZ9e/src/eventloop.jl:8",
+      " [13] (::IJulia.var\"#15#18\")() at ./task.jl:356"
+     ]
     }
    ],
    "source": [
@@ -1203,7 +1224,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.5.1",
+   "display_name": "Julia 1.5.2",
    "language": "julia",
    "name": "julia-1.5"
   },
@@ -1211,7 +1232,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.5.1"
+   "version": "1.5.2"
   }
  },
  "nbformat": 4,
