power series notebook updated

--- a/working_notes/PowerSeriesExapnsions.ipynb
+++ b/working_notes/PowerSeriesExapnsions.ipynb
@@ -2,96 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "$\\require{action}$"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " -----    -----    -----      -      -----   \n",
-      "|     |  |     |  |     |    | |    |     |  \n",
-      "|     |  |        |         |   |   |     |  \n",
-      "|     |   -----   |        |     |  |-----   \n",
-      "|     |        |  |        |-----|  |   |    \n",
-      "|     |  |     |  |     |  |     |  |    |   \n",
-      " -----    -----    -----   -     -  -     -  \n",
-      "\n",
-      "...combining (and extending) GAP, Hecke, Nemo, Polymake and Singular\n",
-      "Version\u001b[32m 0.3.0 \u001b[39m... \n",
-      " ... which comes with absolutely no warranty whatsoever\n",
-      "Type: '?Oscar' for more information\n",
-      "(c) 2019-2020 by The Oscar Development Team\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "power_series_solution (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "include(\"ODE.jl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Galois field with characteristic 2147483647"
+       "@ODEmodel (macro with 1 method)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# the ground field\n",
-    "F = GF(2^31 - 1)"
+    "include(\"../src/ODE.jl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 12.809709 seconds (223.10 M allocations: 7.149 GiB, 6.75% gc time)\n"
+      "Summary of the model:\n",
+      "State variables: I, R, W, S\n",
+      "Parameter: bi, gam, mu, bw, k, xi, a\n",
+      "Inputs: \n",
+      "Outputs: y\n",
+      "  8.459823 seconds (11.06 M allocations: 1021.696 MiB, 1.69% gc time)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Dict{AbstractAlgebra.Generic.MPoly{Nemo.gfp_elem},AbstractAlgebra.Generic.AbsSeries{Nemo.gfp_elem}} with 4 entries:\n",
-       "  x_1 => 3+(117)*t+(1073736923)*t^2+(1073813873)*t^3+(269367689)*t^4+(159698715…\n",
-       "  x_2 => 8+(2147483602)*t+(729)*t^2+(1073724935)*t^3+(1073941934)*t^4+(69925000…\n",
-       "  x_3 => 2+(2147483646)*t+(1073742120)*t^2+(357904983)*t^3+(1163328287)*t^4+(18…\n",
-       "  x_0 => 2+(2147483507)*t+(4652)*t^2+(715764727)*t^3+(714787735)*t^4+(214245401…"
+       "Dict{AbstractAlgebra.Generic.MPoly{Nemo.gfp_elem},AbstractAlgebra.Generic.AbsSeries{Nemo.gfp_elem}} with 12 entries:\n",
+       "  1*xi  => 1 + O(t^1000)\n",
+       "  1*W   => 4 + 2147483644*t + 1073741877*t^2 + 357913825*t^3 + 268432209*t^4 + …\n",
+       "  1*a   => 8 + O(t^1000)\n",
+       "  1*R   => 9 + 2147483531*t + 1332*t^2 + 715820683*t^3 + 1073734262*t^4 + 12169…\n",
+       "  1*S   => 8 + 2147483557*t + 2147482916*t^2 + 19691*t^3 + 1968527291*t^4 + 534…\n",
+       "  1*bi  => 3 + O(t^1000)\n",
+       "  1*y   => 5 + 520*t + 2147482172*t^2 + 715762364*t^3 + 1968566001*t^4 + 197858…\n",
+       "  1*mu  => 6 + O(t^1000)\n",
+       "  1*k   => 5 + O(t^1000)\n",
+       "  1*gam => 10 + O(t^1000)\n",
+       "  1*bw  => 3 + O(t^1000)\n",
+       "  1*I   => 1 + 104*t + 2147483352*t^2 + 1431642661*t^3 + 1252706659*t^4 + 21137…"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,30 +63,21 @@
    "source": [
     "# SIWR Cholera model\n",
     "\n",
-    "var_names = [\n",
-    "    \"x_0\", \"x_1\", \"x_2\", \"x_3\",\n",
-    "    \"a\", \"bi\", \"bw\", \"gam\", \"mu\", \"xi\", \"k\"\n",
-    "]\n",
-    "R, (x_0, x_1, x_2, x_3, a, bi, bw, gam, mu, xi, k) = PolynomialRing(F, var_names)\n",
-    "\n",
-    "ode = ODE(\n",
-    "    Dict(\n",
-    "        x_0 => mu - bi * x_0 * x_1 - bw * x_0 * x_2 - mu * x_0 + a * x_3,\n",
-    "        x_1 => bw * x_0 * x_2 + bi * x_0 * x_1 - (gam + mu) * x_1,\n",
-    "        x_2 => xi * (x_1 - x_2),\n",
-    "        x_3 => gam * x_1 - (mu + a) * x_3\n",
-    "    ),\n",
-    "    []\n",
+    "ode = @ODEmodel(\n",
+    "    S'(t) = mu - bi * S(t) * I(t) - bw * S(t) * W(t) - mu * S(t) + a * R(t),\n",
+    "    I'(t) = bw * S(t) * W(t) + bi * S(t) * I(t) - (gam + mu) * I(t),\n",
+    "    W'(t) = xi * (I(t) - W(t)),\n",
+    "    R'(t) = gam * I(t) - (mu + a) * R(t),\n",
+    "    y(t) = k * I(t)\n",
     ")\n",
     "\n",
-    "params = [a, bi, bw, gam, mu, xi, k]\n",
-    "states = [x_0, x_1, x_2, x_3]\n",
+    "ode_red = reduce_ode_mod_p(ode, 2^31 - 1)\n",
     "\n",
     "@time ps = power_series_solution(\n",
-    "    ode,\n",
-    "    Dict(p => rand(1:10) for p in params),\n",
-    "    Dict(x => rand(1:10) for x in states),\n",
-    "    Dict(),\n",
+    "    ode_red,\n",
+    "    Dict(p => rand(1:10) for p in ode_red.parameters),\n",
+    "    Dict(x => rand(1:10) for x in ode_red.x_vars),\n",
+    "    Dict{typeof(ode_red.x_vars[1]), Array{Int64, 1}}(),\n",
     "    1000\n",
     ")"
    ]
@@ -316,15 +271,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.4.2",
+   "display_name": "Julia 1.5.2",
    "language": "julia",
-   "name": "julia-1.4"
+   "name": "julia-1.5"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.4.2"
+   "version": "1.5.2"
   }
  },
  "nbformat": 4,
