Verify more models

--- a/benchmarking/bib/Biohydrogenation_io.bib
+++ b/benchmarking/bib/Biohydrogenation_io.bib
@@ -1,11 +1,25 @@
-@article{Moate2008Ruminal,
-  title = {Kinetics of ruminal lipolysis of triacylglycerol and biohydrogenation of long-chain fatty acids: New insights from old data},
-  author = {Moate, Peter J. and Boston, Raymond C. and Jenkins, Thomas C. and Lean, Ian J.},
+@article{MOATE2008731,
+  title = {Kinetics of Ruminal Lipolysis of Triacylglycerol and Biohydrogenation of Long-Chain Fatty Acids: New Insights from Old Data},
   journal = {Journal of Dairy Science},
   volume = {91},
   number = {2},
-  pages = {731--742},
+  pages = {731-742},
   year = {2008},
-  doi = {10.3168/jds.2007-0539},
-  url = {https://doi.org/10.3168/jds.2007-0539}
+  issn = {0022-0302},
+  doi = {https://doi.org/10.3168/jds.2007-0398},
+  url = {https://www.sciencedirect.com/science/article/pii/S0022030208714176},
+  author = {P.J. Moate and R.C. Boston and T.C. Jenkins and I.J. Lean},
+}
+
+@article{MUNOZTAMAYO2018701,
+  title = {Review: To be or not to be an identifiable model. Is this a relevant question in animal science modelling?},
+  journal = {animal},
+  volume = {12},
+  number = {4},
+  pages = {701-712},
+  year = {2018},
+  issn = {1751-7311},
+  doi = {https://doi.org/10.1017/S1751731117002774},
+  url = {https://www.sciencedirect.com/science/article/pii/S1751731117002774},
+  author = {R. Muñoz-Tamayo and L. Puillet and J.B. Daniel and D. Sauvant and O. Martin and M. Taghipoor and P. Blavy},
 }
