--- a/benchmarking/bib/Bilirubin2_io.bib
+++ b/benchmarking/bib/Bilirubin2_io.bib
@@ -1,10 +1,10 @@
 @article{Meshkat2014Combos,
   title = {On finding and using identifiable parameter combinations in nonlinear dynamic systems biology models and COMBOS: A novel web implementation},
-  author = {Meshkat, Nidaa and Kuo, Cindy E.-Z. and DiStefano, Joseph},
+  author = {Meshkat, Nicolette AND Kuo, Christine Er-zhen AND DiStefano, III, Joseph},
   journal = {PLOS ONE},
   volume = {9},
   number = {10},
-  pages = {e110261},
+  pages = {1--14},
   year = {2014},
   doi = {10.1371/journal.pone.0110261},
   url = {https://doi.org/10.1371/journal.pone.0110261}
